# Toulouse-Robot-Race-2017

./: .cproject  .project
ai/: line_detection.py
raspi_detection/: CMakeLists.txt  README
raspi_detection/src/: detect.cpp
src/: ToulouseRobotRace_2017.cpp  ToulouseRobotRace_2017.h  commands.cpp  commands.h  lib_us.cpp  lib_us.h  median_filter.c  median_filter.h  params.h
